# rico-conversation-msgs

./: CMakeLists.txt  package.xml
msg/: ScenarioIntentWithParams.msg
srv/: GetScenariosIntentsWithParams.srv
