<?xml version="1.0"?>
<package format="2">
  <name>conversation_msgs</name>
  <version>0.1.0</version>
  <description>The conversation_msgs package</description>

  <maintainer email="nkvch.st@gmail.com">Stanislau Stankevich</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/beginner_tutorials</url>
  <author email="nkvch.st@gmail.com">Stanislau Stankevich</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

</package>
